--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -10,9 +10,12 @@ h4 {
     src: local('vegan'), url('./assets/fonts/vegan.ttf') format('truetype');
 }
 .heading-1 {
-    font-size: 6.5rem;
+    font-size: 5rem;
     line-height: 1;
     font-weight: 700;
+    @include mq-min($v-6) {
+        font-size: 6.5rem;
+    }
 }
 .heading-2 {
     position: relative;
@@ -50,8 +53,11 @@ h4 {
     }
 }
 .heading-3 {
-    font-size: var(--s-42);
+    font-size: var(--s-32);
     line-height: 0.9;
+    @include mq-min($v-6) {
+        font-size: var(--s-42);
+    }
 }
 .heading-4 {
     font-size: 1.8rem;
